# audioPlot

./: CMakeLists.txt
include/: utils.hpp
shader/: lineStrip.frag  lineStrip.vert
src/: main.cpp  shader.cpp  utils.cpp
